--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-danger">
   <div class="panel-heading">
     <h3 class="panel-title">Competition Settings</h3>
   </div>
