--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,10 +1,11 @@
 <div class="row">
   <div class="col-md-3">
-    <div class="panel panel-primary">
+    {{#link-to "competitions.create" class="btn btn-success btn-block"}}New Competition{{/link-to}}
+    <hr>
+    <div class="panel panel-danger">
       <div class="panel-heading">
         {{#link-to 'competitions'}}<h3 class="panel-title">Active Competitions</h3>{{/link-to}}
       </div>
-      {{#link-to "competitions.create" class="btn btn-success btn-block"}}New Competition{{/link-to}}
       <div class="list-group">
         {{#each controller}}
           {{#unless isDirty}}
