--- a/app/assets/javascripts/templates/profile/competitions.hbs
+++ b/app/assets/javascripts/templates/profile/competitions.hbs
@@ -1,6 +1,10 @@
-<h3>Competitions</h3>
-<ul class="nav">
-  {{#each comp in controller}}
-    <li>{{#link-to "competition" comp}}{{comp.name}}{{/link-to}}</li>
-  {{/each}}
-</ul>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">My Competitions</h3>
+  </div>
+  <ul class="nav">
+    {{#each comp in controller}}
+      <li>{{#link-to "competition" comp}}{{comp.name}}{{/link-to}}</li>
+    {{/each}}
+  </ul>
+</div>
