--- a/app/assets/javascripts/templates/users/index.hbs
+++ b/app/assets/javascripts/templates/users/index.hbs
@@ -1,6 +1,6 @@
-<div class="panel panel-primary">
+<div class="panel panel-warning">
   <div class="panel-heading">
-    <h3 class="panel-title">Users</h3>
+    <h3 class="panel-title">Information for other Users</h3>
   </div>
   <div class="panel-body">
     <p>The people are both your friend, and your enemy.They will push you to your max, but if you want to win, you've got to bring the pain. </p>
