--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to "index" classNames="navbar-brand"}}<img src="/assets/ww-gray.png" height="22"></img> {{/link-to}}
+      {{#link-to "index" classNames="navbar-brand"}}<img src="/assets/ww-gray.png" height="22" class=""></img> {{/link-to}}
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -42,8 +42,6 @@
             Log Activity
           </a>
         </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
         <li>
           {{#link-to "contact"}}
             <span class="badge"><span class="glyphicon glyphicon-send"></span></span>
