--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= yield %>
   <% else %>
   <div class="container">  
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Workout Wars</a>
+          <a class="navbar-brand" href="#"><%= image_tag "ww-gray.png", height: 22 %></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
