--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,62 @@
+<div class="row">
+<div class="col-md-3"></div> 
+<div class="col-md-6">
 <h2>Sign up</h2>
+<hr>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.email_field :email, :autofocus => true, class: "form-control" %>
+  <div class="row">
+    <div class="form-group">
+      <%= f.label :email, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= f.email_field :email, :autofocus => true, class: "form-control" %>
+      </div>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :password, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.password_field :password, class: "form-control" %>
+  <br />
+
+  <div class="row">
+    <div class="form-group">
+      <%= f.label :password, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= f.password_field :password, class: "form-control" %>
+      </div>
+    </div>
+  </div>  
+
+  <br />
+
+  <div class="row">
+    <div class="form-group">
+      <%= f.label :password_confirmation, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+      </div>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-    </div>
-  </div>
+  <br />
 
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit "Sign up", class: "btn btn-default" %>
+  <div class="row">
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-9">
+        <%= f.submit "Sign up", class: "btn btn-success btn-block btn-default" %>
+      </div>
     </div>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="row">
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-9">
+        <br />
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-md-3"></div>
+</div>
