--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    {{#link-to "competitions.create" class="btn btn-success btn-block"}}New Competition{{/link-to}}
+    {{#link-to "competitions.create" class="btn btn-info btn-block"}}New Competition{{/link-to}}
     <hr>
     <div class="panel panel-danger">
       <div class="panel-heading">
