--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -5,6 +5,11 @@
       <div class="panel-heading"><h3 class="panel-title">Information</h3></div>
       <table class="table">
         <tr>
+          <td colspan="2">
+            <h3 class="text-success text-center">Registration Open</h3>
+          </td>
+        </tr>
+        <tr>
           <td><strong>Creator</strong></td>
           <td>{{user.email}}</td>
         </tr>
@@ -71,6 +76,7 @@
       <div class="panel-heading"><h3 class="panel-title">Exercises</h3></div> 
       <div class="panel-body">
       {{#if hasPermission}}
+        {{#unless controller.model.competitionExercises}}
         <div class="row">
           <div class="col-md-3">
             <button class="btn btn-default" {{ action "addExercise" }}>Add Exercise</button>
@@ -81,6 +87,7 @@
           </div> 
         </div>
         <br />
+        {{/unless}}        
       {{/if}} 
       <ul class="list-group">     
         {{#each compExercise in controller.model.competitionExercises}}        
