--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,7 +1,3 @@
 <h2>{{name}}</h2>
 <hr>
-{{#if started}} 
-  {{partial 'started_competition'}}
-{{else}}
-  {{partial 'unstarted_competition'}}
-{{/if}}
+{{partial currentPartial}} 
