--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -74,9 +74,7 @@
 
 <!-- FOOTER -->
 <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-  <br />
-  <footer>
+  <footer id="main-footer">
     <p class="text-center text-primary">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
-  <br />
 </nav>
