--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   
   <% if user_signed_in? %>
-    <meta name="current-user" content="<%= UserSerializer.new(current_user).to_json(root: false) %>" />
+    <meta name="current-user" content="<%= (current_user.id).to_json %>" />
   <%= yield %>
   <% else %>
   <div class="container">  
