--- a/app/assets/javascripts/templates/_started_competition.hbs
+++ b/app/assets/javascripts/templates/_started_competition.hbs
@@ -54,10 +54,10 @@
 
 <div class="panel panel-danger">
   <div class="panel-heading"><h3 class="panel-title">Leaderboard</h3></div>
-  <ul class="list-group">      
+  <ul class="list-group">    
     {{#each compJoin in controller.competitionJoins}}
       <li class="list-group-item">
-        {{#if rank}}<h4>Rank: {{compJoin.rank}}</h4>{{/if}}
+        {{#if compJoin.rank}}<h4>Rank: {{compJoin.rank}}</h4>{{/if}}
         <h5>User: {{compJoin.user.email}}</h5>
         <h5>Total: {{compJoin.total}}</h5>   
       </li>
