--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -57,7 +57,7 @@
           </li>
           {{#if canUpdate}}
           <li class="list-group-item">
-            {{#link-to "competition.edit" this class="btn btn-default btn-block" name="Edit Competition"}}Edit{{/link-to}}
+            {{#link-to "competition.edit" this id="edit_competition" class="btn btn-default btn-block"}}Edit{{/link-to}}
           </li>
           <li class="list-group-item">
             <a href="#" class="btn btn-default btn-block" name="Delete Competition" {{action delete this}}>Delete</a>
