--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -15,3 +15,9 @@ div.loading-gif {
 #main-footer {
   margin-top: 13px;
 }
+
+.terms {
+  height: 100px;
+  overflow-y: scroll;
+  border: 1px solid #eee;
+}
