changes leave to leave competition

--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -48,7 +48,7 @@
         <ul class="list-group">
           <li class="list-group-item">
             {{#if isJoined}}
-              <button class="btn btn-default btn-block"{{action "leave"}}>Leave</button>
+              <button class="btn btn-default btn-block"{{action "leave"}}>Leave Competition</button>
             {{else}}
               {{#if canJoin}}
                 <button class="btn btn-default btn-block"{{action "join"}}>Join</button>
