update ember and ember data

--- a/app/assets/javascripts/templates/activity.hbs
+++ b/app/assets/javascripts/templates/activity.hbs
@@ -3,7 +3,7 @@
     <h3 class="panel-title">Activity Details</h3>
   </div>
     <div class="panel-body">        
-      <a href="#" class="btn btn-danger pull-right" {{action delete this}}>Delete</a>
+      <a href="#" class="btn btn-danger pull-right" {{action "delete" this}}>Delete</a>
       <h2>{{exercise.name}}</h2>
       {{#if exercise.reps}}
         <p>Reps: {{reps}}</p>
