--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -37,7 +37,7 @@
           {{/link-to}}
         </li>   
         <li>
-          <a href="#" {{action logActivity}} name="Log Activity">
+          <a href="#" {{action "logActivity"}} name="Log Activity">
             <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
             Log Activity
           </a>
