--- a/app/assets/javascripts/templates/_unstarted_competition.hbs
+++ b/app/assets/javascripts/templates/_unstarted_competition.hbs
@@ -60,7 +60,7 @@
             {{#link-to "competition.edit" this id="edit_competition" class="btn btn-default btn-block"}}Edit{{/link-to}}
           </li>
           <li class="list-group-item">
-            <a href="#" class="btn btn-default btn-block" name="Delete Competition" {{action delete this}}>Delete</a>
+            <a href="#" class="btn btn-default btn-block" name="Delete Competition" {{action "delete" this}}>Delete</a>
           </li>
           {{/if}}
         </ul>            
