--- a/app/assets/javascripts/templates/log_activity.hbs
+++ b/app/assets/javascripts/templates/log_activity.hbs
@@ -68,7 +68,7 @@
   </div>
 </div>
 <div class="modal-footer">
-  <a href="#" class="btn" name="Close" {{action close target="view"}}>Close</a>
+  <a href="#" class="btn" name="Close" {{action "close" target="view"}}>Close</a>
   <button class="btn btn-primary">Save changes</button>
 </div>
 </form>
